--- a/html/tab2.html
+++ b/html/tab2.html
@@ -20,12 +20,13 @@
 <div id="analysis1Plot1"></div>
 <p id="analysis1Eqn1" style="text-align: center;"></p>
 <h5>About the observed behavior</h5>
-<p>
-  According to the collected data from the plot, explain why the graphic
-  displays that behavior in terms of:
-</p>
+
 <ul>
   <li>The increasement and decreasement of the regression.</li>
+  <p>
+    In this graph it is possible to show an increase in the level of energy used
+    in my house
+  </p>
   <li>The relation among the dots regarding the colors.</li>
   <li>
     Estimate how many energy you will consume in the next month. Use LaTeX
